# ctex

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md  ctex.xml  freeze.py  index.html  note.md  requirements.txt  run.py
ctex/: ctex.hpp  detector.cpp  glogger.hpp  i18n.hpp  lexeme.cpp  ltree.hpp  server.py  settings.py  views.py
ctex/templates/: base.html  index.html
main/include/: ctex.hpp  detector.hpp  glogger.hpp  i18n.hpp  lexeme.hpp  ltree.hpp  processing.hpp  utils.hpp
main/src/: ctex.cpp  detector.cpp  lexeme.cpp  ltree.cpp  main.cpp  processing.cpp
static/contents/: head.md  introduction.md  usage.md
static/css/: style.css
static/doc/: _read_me_8md.html  annotated_dup.js  class_c_tex-members.html  class_c_tex.html  class_c_tex.js  class_c_tex_a0e149727fcf26dede7fd95333b577704_cgraph.md5  class_c_tex_a7f18797ac99e4fb8f8609afe981f292b_cgraph.map  class_c_tex_a8991fa5b82fbff08e47d02ff01c1e703_cgraph.map  class_c_tex_abab80d40f0ee81fb67e8bfaceab65796_cgraph.map  class_c_tex_ac9810e41ad2dcb0ad75a389ca6c695bd_cgraph.map  class_c_tex_ac9810e41ad2dcb0ad75a389ca6c695bd_cgraph.md5  class_c_tex_ac9810e41ad2dcb0ad75a389ca6c695bd_icgraph.md5  class_c_tex_ad403a1e5f7ddcbe66bbdb20d1747ba10_cgraph.map  class_detector.js  class_detector_a24c56284ce045c6e6cb8143076075a59_cgraph.md5  class_detector_a24c56284ce045c6e6cb8143076075a59_icgraph.md5  class_detector_ac1b6beae1ca250bd975d8aedb6eb4ec7_cgraph.map  class_g_logger.html  class_g_logger.js  class_g_logger_a0d796841d8ea54e2f749145985fef29f_icgraph.map  (+122 more)
test/: tests.cpp
test/src/: tests.cpp
(+218 files in other folders)
